# RustEpubReader

./: .gitignore  Cargo.toml  ISSUE_BODY.md  NOTICE  README.md  STATUS_HANDOFF.md  STATUS_MIGRATION.md  highlight_focus_bug.json  test10.py  test11.py  test12.py  test8.py  test9.py
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android-bridge/: Cargo.toml
android-bridge/src/: lib.rs
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/epub/reader/: EpubReaderApp.kt  MainActivity.kt  RustBridge.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/values-zh/: strings.xml
android/gradle/: gradle-daemon-jvm.properties
android/pagecurl/: build.gradle.kts
android/pagecurl/src/main/: AndroidManifest.xml
android/pagecurl/src/main/kotlin/eu/wewox/pagecurl/: ExperimentalPageCurlApi.kt
core/: Cargo.toml
core/src/: lib.rs  search.rs
core/src/csc/: mod.rs  model.rs  tokenizer.rs
core/src/epub/: mod.rs
core/src/epub/parser/: html.rs  image.rs  mod.rs
core/src/i18n/: en.json  mod.rs  zh_cn.json
core/src/sharing/: crypto.rs  discovery.rs  keystore.rs  mod.rs  peer.rs  protocol.rs
core/src/txt/: build.rs  clean.rs  detect.rs  mod.rs  split.rs
debian/: rust-epub-reader.desktop
desktop/: Cargo.toml  build.rs
desktop/src/: app.rs  main.rs  self_update.rs
desktop/src/ui/: about.rs  annotations.rs  csc_settings.rs  export_dialog.rs  github_oauth.rs  library.rs  reader.rs  reader_block.rs  reader_state.rs  review_panel.rs  search.rs  settings.rs  settings_new.rs  sharing.rs  stats.rs  toc.rs  toolbar.rs  tts.rs  txt_import.rs
(+43 files in other folders)
