[package]
name = "rust_epub_reader"
version.workspace = true
edition = "2021"
license.workspace = true

[dependencies]
reader_core = { path = "../core", features = ["keychain"] }
eframe = "0.31"
rfd = "0.15"
image = "0.25"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
# self-update
anyhow = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
tempfile = "3"
open = "5"
urlencoding = "2"
msedge-tts = "0.3"
rodio = "0.20"
openssl = { version = "0.10", features = ["vendored"], optional = true }

[features]
default = ["csc", "directml"]
csc = ["reader_core/csc"]
cuda = ["csc", "reader_core/cuda"]
tensorrt = ["csc", "reader_core/tensorrt"]
directml = ["csc", "reader_core/directml"]
vendored-openssl = ["openssl/vendored"]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.deb]
name = "rust-epub-reader"
maintainer = "zhongbai233 <zhongbai233@example.com>"
copyright = "2026, zhongbai233"
license-file = ["../LICENSE", "4"]
extended-description = """\
A cross-platform EPUB reader built with Rust. \
Supports desktop (Linux/Windows/macOS) and Android. \
Features include library management, reading modes, \
TOC navigation, theme customization, and LAN sharing."""
depends = "$auto, libz1, libasound2, libssl3, libstdc++6"
section = "utils"
priority = "optional"
assets = [
    ["target/release/rust_epub_reader", "usr/bin/rust-epub-reader", "755"],
    ["../icon/ReaderIcon.png", "usr/share/icons/hicolor/256x256/apps/rust-epub-reader.png", "644"],
    ["../debian/rust-epub-reader.desktop", "usr/share/applications/rust-epub-reader.desktop", "644"],
]
